--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,11 @@ flask>=2.3.3
 azure-ai-projects>=1.0.0b09
 azure-identity>=1.15.0
 azure-core>=1.33.0
+
+
+
+
+
+azure-identity>=1.15.0
+openai>=1.0.0
+python-dotenv>=1.0.0
